Allowing export in XLSX

--- a/resources/js/lang/en.json
+++ b/resources/js/lang/en.json
@@ -35,5 +35,6 @@
   "send_verification_link": "Send Verification Link",
   "resend_verification_link": "Resend Verification Link ?",
   "failed_to_verify_email": "Failed to verify email.",
-  "verify_email_address": "We sent you an email with an the verification link."
+  "verify_email_address": "We sent you an email with an the verification link.",
+  "form_data_export_as" : "Export as"
 }
