--- a/resources/js/lang/es.json
+++ b/resources/js/lang/es.json
@@ -30,5 +30,6 @@
   "password_updated": "¡Tu contraseña ha sido actualizada!",
   "new_password": "Nueva Contraseña",
   "login_with": "Iniciar Sesión con",
-  "register_with": "Registro con"
+  "register_with": "Registro con",
+  "form_data_export_as" : "Exportar como"
 }
