Working on configuration

--- a/docs/configuration/environment-variables.mdx
+++ b/docs/configuration/environment-variables.mdx
@@ -10,3 +10,7 @@ Key environment variables include:
 - Application settings
 
 Please refer to the `.env.example` file in the project root for a complete list of environment variables.
+
+import CloudVersion from "/snippets/cloud-version.mdx";
+
+<CloudVersion/>
