--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -1,28 +1,54 @@
-# Introduction to OpnForm
+---
+title: "Introduction to OpnForm"
+description: "An open-source form builder"
+---
 
-OpnForm is an open-source form builder, providing an alternative to products like Typeform, JotForm, and Tally.
+import CloudVersion from "/snippets/cloud-version.mdx";
+
+OpnForm is an open-source form builder designed to empower developers and users alike. This technical documentation serves as your comprehensive guide to understanding, implementing, and contributing to OpnForm.
+
+
+<CardGroup cols={2}>
+  <Card title="Cloud Version" icon="cloud" href="https://opnform.com/?utm_source=docs&utm_medium=introduction&utm_campaign=cloud_version">
+    Managed service with high availability and security.
+  </Card>
+  <Card title="Deploy" icon="server" href="/deployment">
+    Self-host OpnForm for full control and customization.
+  </Card>
+  <Card title="Contribute" icon="code-branch" href="/contributing">
+    Join our open-source community and contribute.
+  </Card>
+  <Card title="API Reference" icon="book" href="/api-reference">
+    Integrate OpnForm with our comprehensive API.
+  </Card>
+</CardGroup>
+
+For end-user documentation, feature explanations, and usage guides, please refer to our [Help Center](https://help.opnform.com).
 
 ## Features
 
-- No-code form builder with unlimited fields & submissions
-- Various input types: Text, Date, URL, Phone, Email, Checkboxes, Select, Multi-Select, Number, Star-ratings, File uploads & more
-- Embed anywhere (website, Notion page, etc.)
-- Email notifications for form owners & respondents
-- Hidden fields
-- Form passwords
-- URL form pre-fill
-- Slack integration
-- Webhooks
-- Form logic
-- Customizable colors, images, and custom code
-- Captcha form protection
-- Form closing date
-- Limit on number of submissions
+-   🚀 No-code form builder with unlimited forms, fields & submissions
+-   📝 Various input types: Text, Date, URL, Phone, Email, Checkboxes, Select, Multi-Select, Number, Star-ratings, File uploads & more
+-   🌐 Embed anywhere (website, Notion page, etc.)
+-   📧 Email notifications for form owners & respondents
+-   🔒 Hidden fields and form passwords
+-   🔗 URL form pre-fill
+-   💬 Slack and Discord integrations
+-   🪝 Webhooks
+-   🧠 Form logic and AI-powered form generation
+-   🎨 Customizable colors, images, and custom code
+-   🛡️ Captcha form protection
+-   📅 Form closing date
+-   🔢 Limit on number of submissions
+-   📊 Form analytics
+-   📁 File uploads
+-   🆔 Unique submission ID
+-   📱 Single or multi-page forms
+-   🔍 Form templates for inspiration
+-   🔄 Editable submissions
+-   🌐 Custom domain
+-   🏷️ Remove OpnForm branding
+-   🔔 Form confirmation emails
+-   ...[and more](https://opnform.com/pricing)!
 
-For a complete list of features and more details, visit our [product documentation](https://help.opnform.com).
-
-## Getting Started
-
-The easiest way to get started with OpnForm is through our [official managed service in the Cloud](https://opnform.com/). It takes just 1 minute to try out the builder for free, with high availability, backups, security, and maintenance all managed for you.
-
-For self-hosted installations, please refer to our deployment guides.
+<CloudVersion />
