--- a/docs/tech-stack.mdx
+++ b/docs/tech-stack.mdx
@@ -1,31 +1,62 @@
-# Tech Stack
+---
+title: "Tech Stack"
+description: "Overview of OpnForm's technology stack"
+---
 
 OpnForm is built using a modern and robust technology stack, ensuring high performance, scalability, and maintainability. Here's an overview of the main technologies used in the project:
 
 ## Backend
 
-- **[PHP](https://www.php.net/)**: Version 8.0 or higher
-- **[Laravel](https://laravel.com/)**: The PHP framework that powers the backend of OpnForm
+<Card title="PHP" icon="php" href="https://www.php.net/" horizontal>
+  Version 8.0 or higher, powering the core backend functionality.
+</Card>
+
+<Card title="Laravel" icon="laravel" href="https://laravel.com/" horizontal>
+  The PHP framework that powers the backend of OpnForm.
+</Card>
 
 ## Database
 
-- **[MySQL](https://www.mysql.com/)/[MariaDB](https://mariadb.org/)** or **[PostgreSQL](https://www.postgresql.org/)**: OpnForm supports both of these popular relational database management systems
+<Card title="SQL Database" icon="database" href="https://en.wikipedia.org/wiki/SQL" horizontal>
+  Supports relational database management systems like MySQL/MariaDB and PostgreSQL.
+</Card>
 
 ## Frontend
 
-- **[Vue.js 3](https://v3.vuejs.org/)**: The progressive JavaScript framework used for building the user interface
-- **[Nuxt.js](https://nuxt.com/)**: The Vue.js framework that enables server-side rendering and other powerful features
-- **[TailwindCSS](https://tailwindcss.com/)**: A utility-first CSS framework for rapidly building custom user interfaces
+<Card title="Vue.js 3" icon="vuejs" href="https://v3.vuejs.org/" horizontal>
+  The progressive JavaScript framework used for building the user interface.
+</Card>
+
+<Card title="Nuxt.js" icon="mountains" href="https://nuxt.com/" horizontal>
+  The Vue.js framework that enables server-side rendering and other powerful features.
+</Card>
+
+<Card title="TailwindCSS" icon="wind" href="https://tailwindcss.com/" horizontal>
+  A utility-first CSS framework for rapidly building custom user interfaces.
+</Card>
 
 ## Asset Compilation
 
-- **[Node.js](https://nodejs.org/)**: Used for running JavaScript tools in the development environment
-- **[NPM](https://www.npmjs.com/)/[Yarn](https://yarnpkg.com/)**: Package managers for installing and managing frontend dependencies
+<Card title="Node.js" icon="node-js" href="https://nodejs.org/" horizontal>
+  Used for running JavaScript tools in the development environment.
+</Card>
+
+<Card title="NPM" icon="npm" href="https://www.npmjs.com/" horizontal>
+  Package manager for installing and managing frontend dependencies.
+</Card>
 
 ## Additional Technologies
 
-- **[Docker](https://www.docker.com/)**: Containerization platform used for easy deployment and development setup
-- **[Redis](https://redis.io/)**: In-memory data structure store, used for caching and as a message broker
-- **[AWS S3](https://aws.amazon.com/s3/)** (or compatible): Used for file storage
+<Card title="Docker" icon="docker" href="https://www.docker.com/" horizontal>
+  Containerization platform used for easy deployment and development setup.
+</Card>
 
-This tech stack allows OpnForm to deliver a fast, responsive, and feature-rich form building experience. For detailed installation instructions and system requirements, please refer to our [Docker deployment guide](deployment/docker) or [Laravel Valet deployment guide](deployment/laravel-valet).
+<Card title="Redis" icon="layer-group" href="https://redis.io/" horizontal>
+  In-memory data structure store, used for caching and as a message broker.
+</Card>
+
+<Card title="AWS S3" icon="bucket" href="https://aws.amazon.com/s3/" horizontal>
+  Used for file storage (or compatible alternatives).
+</Card>
+
+This tech stack allows OpnForm to deliver a fast, responsive, and feature-rich form building experience. For detailed installation instructions and system requirements, please refer to our [Docker deployment guide](deployment/docker) or [Local deployment guide](deployment/local-deployment).
