--- a/docs/contributing/getting-started.mdx
+++ b/docs/contributing/getting-started.mdx
@@ -4,7 +4,9 @@ This page will guide new contributors on how to start contributing to OpnForm.
 
 Topics include:
 
+add link to relevant pages
 - Setting up the development environment
 - Understanding the project structure
 - Coding standards and best practices
-- How to find issues to work on
+- How to find issues to work on (and bounties)
+- pull requests
