--- a/docs/contributing/getting-started.mdx
+++ b/docs/contributing/getting-started.mdx
@@ -1,12 +1,20 @@
-# Getting Started with Contributing
+---
+title: "Getting Started with Contributing"
+description: "Learn how to contribute to OpnForm"
+---
 
-This page will guide new contributors on how to start contributing to OpnForm.
+Welcome to the OpnForm contributing guide! Here are some helpful links to get you started:
 
-Topics include:
+<CardGroup cols={2}>
+  <Card title="Setting up the development environment" icon="gear" href="../configuration/environment-variables">
+    Learn how to configure the environment variables for OpnForm.
+  </Card>
+  <Card title="Adding a new form block" icon="puzzle-piece" href="new-form-block">
+    Follow the steps to add a new form block to your project.
+  </Card>
+  <Card title="Integrating new services" icon="plug" href="new-integration">
+    Discover how to integrate new services with OpnForm.
+  </Card>
+</CardGroup>
 
-add link to relevant pages
-- Setting up the development environment
-- Understanding the project structure
-- Coding standards and best practices
-- How to find issues to work on (and bounties)
-- pull requests
+We sometimes offer bounties for certain issues. Check out our [bounties page](https://console.algora.io/org/OpnForm) for more information.
