--- a/docs/contributing/new-form-block.mdx
+++ b/docs/contributing/new-form-block.mdx
@@ -1,10 +1,6 @@
-# Creating a New Form Block
+---
+title: "Creating a New Form Block"
+description: "Learn how to create a new form block for OpnForm"
+---
 
-This guide will walk through the process of creating a new form block for OpnForm.
-
-Topics include:
-
-- Understanding the form block architecture
-- Creating the necessary files
-- Implementing the block logic
-- Testing and submitting the new block
+<Warning>Whoops not ready yet! This page is still to be written.</Warning>
