--- a/docs/contributing/new-integration.mdx
+++ b/docs/contributing/new-integration.mdx
@@ -1,10 +1,6 @@
-# Adding a New Integration
+---
+title: "Adding a New Integration"
+description: "Learn how to add a new integration to OpnForm"
+---
 
-This guide will explain how to add a new integration to OpnForm.
-
-Topics include:
-
-- Understanding the integration system
-- Setting up the integration files
-- Implementing the integration logic
-- Testing and documenting the new integration
+<Warning>Whoops not ready yet! This page is still to be written.</Warning>
