Added misisng initial login section

--- a/docs/deployment/docker.mdx
+++ b/docs/deployment/docker.mdx
@@ -44,6 +44,17 @@ import CloudVersion from "/snippets/cloud-version.mdx";
 5. Access OpnForm at http://localhost
 
 
+### Initial Login
+
+After installation, use these credentials to access the app:
+
+-   Email: `admin@opnform.com`
+-   Password: `password`
+
+You will be prompted to change your email and password after your first login.
+
+<Note>Public registration is disabled in the self-hosted version. Use the admin account to invite additional users.</Note>
+
 ## Docker Images
 
 OpnForm provides pre-built Docker images for easy deployment. You can find our official Docker images on Docker Hub:
