--- a/client/i18n/lang/pt.json
+++ b/client/i18n/lang/pt.json
@@ -2,6 +2,7 @@
     "forms": {
         "select": {
             "search": "Buscar",
+            "searchOrTypeToCreateNew": "Buscar ou escreva algo para criar uma nova opção",
             "typeSomethingToAddAnOption": "Escreva algo para adicionar uma opção",
             "noOptionAvailable": "Nenhuma opção disponível",
             "create": "Criar"
