--- a/client/i18n/lang/hi.json
+++ b/client/i18n/lang/hi.json
@@ -1,5 +1,15 @@
 {
+    "app": {
+        "name": "ऑपनफॉर्म"
+    },
     "forms": {
+        "powered_by": "ऑपनफॉर्म के साथ",
+        "password_protected": "यह फ़ॉर्म पासवर्ड से सुरक्षित है।",
+        "invalid_password": "अमान्य पासवर्ड।",
+        "password_required": "पासवर्ड आवश्यक है।",
+        "create_form_free": "अपनी फ़ॉर्म फ्री में ऑपनफॉर्म के साथ बनाएं",
+        "submit": "जमा करें",
+        "wrong_form_structure": "यह फ़ॉर्म संरचना में कुछ गलत है। यदि आप फ़ॉर्म का मालिक हैं, तो कृपया हमसे संपर्क करें।",
         "select": {
             "search": "खोजें",
             "searchOrTypeToCreateNew": "खोजें या कुछ भी टाइप करें जो विकल्प जोड़ने के लिए",
