--- a/client/i18n/lang/es.json
+++ b/client/i18n/lang/es.json
@@ -1,5 +1,15 @@
 {
+    "app": {
+        "name": "OpnForm"
+    },
     "forms": {
+        "powered_by": "Desarrollado por",
+        "password_protected": "Este formulario está protegido por una contraseña.",
+        "invalid_password": "Contraseña inválida.",
+        "password_required": "Se requiere una contraseña.",
+        "create_form_free": "Crea tu formulario gratis con OpnForm",
+        "submit": "Enviar",
+        "wrong_form_structure": "Algo está mal con la estructura de este formulario. Si eres el propietario del formulario, por favor contacta con nosotros.",
         "select": {
             "search": "Buscar",
             "searchOrTypeToCreateNew": "Buscar o escribe algo para crear una nueva opción",
