--- a/client/i18n/lang/zh.json
+++ b/client/i18n/lang/zh.json
@@ -1,5 +1,15 @@
 {
+    "app": {
+        "name": "OpnForm"
+    },
     "forms": {
+        "powered_by": "Powered by",
+        "password_protected": "此表单受密码保护。",
+        "invalid_password": "无效密码。",
+        "password_required": "密码是必需的。",
+        "create_form_free": "免费使用OpnForm创建表单",
+        "submit": "提交",
+        "wrong_form_structure": "此表单的结构有问题。如果您是表单所有者，请与我们联系。",
         "select": {
             "search": "搜索",
             "searchOrTypeToCreateNew": "搜索或输入以创建新选项",
