Update OpenFormFocused component and add internationalization support for navigation buttons
- Modified OpenFormFocused.vue to utilize localized text for 'Back' and 'Next' buttons using the $t function.
- Added translations for 'Back' and 'Next' buttons in multiple languages (Arabic, English, Spanish, French, Hindi, Japanese, Portuguese, Chinese).

These changes enhance the user experience by providing localized navigation options in the form component.

--- a/client/i18n/lang/ar.json
+++ b/client/i18n/lang/ar.json
@@ -3,6 +3,8 @@
         "name": "أوبنفورم"
     },
     "forms": {
+        "back": "رجوع",
+        "next": "التالي",
         "powered_by": "مشغل بواسطة",
         "password_protected": "هذا النموذج محمي بكلمة مرور.",
         "invalid_password": "كلمة مرور غير صالحة.",
