--- a/client/i18n/lang/zh.json
+++ b/client/i18n/lang/zh.json
@@ -3,6 +3,8 @@
         "name": "OpnForm"
     },
     "forms": {
+        "back": "返回",
+        "next": "下一步",
         "powered_by": "Powered by",
         "password_protected": "此表单受密码保护。",
         "invalid_password": "无效密码。",
