--- a/client/i18n/lang/mr.json
+++ b/client/i18n/lang/mr.json
@@ -3,6 +3,8 @@
         "name": "OpnForm"
     },
     "forms": {
+        "back": "पुढे",
+        "next": "पुढे",
         "powered_by": "द्वारे संचालित",
         "password_protected": "हा फॉर्म पासवर्डने संरक्षित आहे.",
         "invalid_password": "अवैध पासवर्ड.",
