--- a/client/i18n/lang/ta.json
+++ b/client/i18n/lang/ta.json
@@ -3,6 +3,8 @@
         "name": "OpnForm"
     },
     "forms": {
+        "back": "பின்னுக்கு",
+        "next": "பின்னுக்கு",
         "powered_by": "மூலம் இயக்கப்படுகிறது",
         "password_protected": "இந்தப் படிவம் கடவுச்சொல்லால் பாதுகாக்கப்பட்டுள்ளது.",
         "invalid_password": "தவறான கடவுச்சொல்.",
