Update Barcode scanner UI

--- a/client/i18n/lang/ar.json
+++ b/client/i18n/lang/ar.json
@@ -36,6 +36,9 @@
         "signatureInput": {
             "uploadFileInstead": "تحميل ملف بدلاً من ذلك",
             "clear": "مسح"
+        },
+        "barcodeInput": {
+            "clickToOpenCamera": "انقر لفتح كاميرا"
         }
     }
 } 
