--- a/client/i18n/lang/de.json
+++ b/client/i18n/lang/de.json
@@ -36,6 +36,9 @@
         "signatureInput": {
             "uploadFileInstead": "Stattdessen Datei hochladen",
             "clear": "Löschen"
+        },
+        "barcodeInput": {
+            "clickToOpenCamera": "Klicken Sie, um eine Kamera zu öffnen"
         }
     }
 } 
