--- a/client/i18n/lang/ru.json
+++ b/client/i18n/lang/ru.json
@@ -36,6 +36,9 @@
         "signatureInput": {
             "uploadFileInstead": "Вместо этого загрузить файл",
             "clear": "Очистить"
+        },
+        "barcodeInput": {
+            "clickToOpenCamera": "Нажмите, чтобы открыть камеру"
         }
     }
 } 
