--- a/client/i18n/lang/tr.json
+++ b/client/i18n/lang/tr.json
@@ -36,6 +36,9 @@
         "signatureInput": {
             "uploadFileInstead": "Bunun yerine dosya yükle",
             "clear": "Temizle"
+        },
+        "barcodeInput": {
+            "clickToOpenCamera": "Kamera açmak için tıklayın"
         }
     }
 } 
