--- a/client/i18n/lang/fr.json
+++ b/client/i18n/lang/fr.json
@@ -36,6 +36,9 @@
         "signatureInput": {
             "uploadFileInstead": "Uploader un fichier à la place",
             "clear": "Effacer"
+        },
+        "barcodeInput": {
+            "clickToOpenCamera": "Cliquez pour ouvrir une caméra"
         }
     }
 }
