--- a/client/i18n/lang/hi.json
+++ b/client/i18n/lang/hi.json
@@ -36,6 +36,9 @@
         "signatureInput": {
             "uploadFileInstead": "इसके बजाय फ़ाइल अपलोड करें",
             "clear": "साफ़ करें"
+        },
+        "barcodeInput": {
+            "clickToOpenCamera": "क्लिक करें कैमरा खोलने के लिए"
         }
     }
 } 
