--- a/client/i18n/lang/ja.json
+++ b/client/i18n/lang/ja.json
@@ -36,6 +36,9 @@
         "signatureInput": {
             "uploadFileInstead": "代わりにファイルをアップロード",
             "clear": "クリア"
+        },
+        "barcodeInput": {
+            "clickToOpenCamera": "クリックしてカメラを開く"
         }
     }
 } 
