--- a/client/i18n/lang/jv.json
+++ b/client/i18n/lang/jv.json
@@ -36,6 +36,9 @@
         "signatureInput": {
             "uploadFileInstead": "Unggah berkas ing panggone",
             "clear": "Resiki"
+        },
+        "barcodeInput": {
+            "clickToOpenCamera": "Klik kanggo nggawe kamera"
         }
     }
 } 
