--- a/client/i18n/lang/vi.json
+++ b/client/i18n/lang/vi.json
@@ -36,6 +36,9 @@
         "signatureInput": {
             "uploadFileInstead": "Tải lên tệp thay thế",
             "clear": "Xóa"
+        },
+        "barcodeInput": {
+            "clickToOpenCamera": "Nhấp để mở Camera"
         }
     }
 } 
