--- a/client/i18n/lang/zh.json
+++ b/client/i18n/lang/zh.json
@@ -36,6 +36,9 @@
         "signatureInput": {
             "uploadFileInstead": "改为上传文件",
             "clear": "清除"
+        },
+        "barcodeInput": {
+            "clickToOpenCamera": "点击打开相机"
         }
     }
 } 
