--- a/docs/deployment/local-deployment.mdx
+++ b/docs/deployment/local-deployment.mdx
@@ -26,7 +26,7 @@ Make sure these components are properly installed and configured on your local m
 2. Clone the repository and install dependencies:
 
    ```bash
-   git clone git@github.com:JhumanJ/OpnForm.git && cd OpnForm
+   git clone https://github.com/JhumanJ/opnform && cd OpnForm
    cd api && composer install
    cd ../client && npm install
    ```
