Support for Barcode reader (#650)
* Add Barcode Input Component and Integrate Quagga for Scanning

- Introduced a new BarcodeInput component for scanning barcodes using the Quagga library.
- Updated package.json and package-lock.json to include Quagga as a dependency.
- Enhanced form themes to accommodate the new BarcodeInput component.
- Added localization support for barcode scanning actions in English.
- Updated blocks_types.json to register the new barcode input type.

These changes improve the application's functionality by allowing users to scan barcodes directly within forms, enhancing user experience and data input efficiency.

* Update Barcode scanner UI

* Barcode decoder as user selection

* improve barcode

--- a/client/i18n/lang/en.json
+++ b/client/i18n/lang/en.json
@@ -36,6 +36,9 @@
         "signatureInput": {
             "uploadFileInstead": "Upload file instead",
             "clear": "Clear"
+        },
+        "barcodeInput": {
+            "clickToOpenCamera": "Click to open a camera"
         }
     }
 } 
