--- a/client/i18n/lang/ru.json
+++ b/client/i18n/lang/ru.json
@@ -39,6 +39,12 @@
         },
         "barcodeInput": {
             "clickToOpenCamera": "Нажмите, чтобы открыть камеру"
+        },
+        "payment": {
+            "amount_to_pay": "Сумма к оплате",
+            "success": "Оплата прошла успешно",
+            "name_on_card": "Имя на карте",
+            "billing_email": "Адрес электронной почты для выставления счетов"
         }
     }
 } 
