--- a/client/i18n/lang/ta.json
+++ b/client/i18n/lang/ta.json
@@ -39,6 +39,12 @@
         },
         "barcodeInput": {
             "clickToOpenCamera": "கிளிக் செய்யவும் கேமரா திறக்கவும்"
+        },
+        "payment": {
+            "amount_to_pay": "பதிவேற்றப்பட வேண்டிய தொகை",
+            "success": "பதிவேற்றம் வெற்றிகரமானது",
+            "name_on_card": "கார்டின் பெயர்",
+            "billing_email": "பில்லிங் மின்னஞ்சல் முகவரி"
         }
     }
 } 
