--- a/client/i18n/lang/tr.json
+++ b/client/i18n/lang/tr.json
@@ -39,6 +39,12 @@
         },
         "barcodeInput": {
             "clickToOpenCamera": "Kamera açmak için tıklayın"
+        },
+        "payment": {
+            "amount_to_pay": "Ödeme miktarı",
+            "success": "Ödeme başarılı",
+            "name_on_card": "Kart üzerindeki ad",
+            "billing_email": "Fatura e-posta adresi"
         }
     }
 } 
