--- a/client/i18n/lang/fr.json
+++ b/client/i18n/lang/fr.json
@@ -39,6 +39,12 @@
         },
         "barcodeInput": {
             "clickToOpenCamera": "Cliquez pour ouvrir une caméra"
+        },
+        "payment": {
+            "amount_to_pay": "Montant à payer",
+            "success": "Paiement réussi",
+            "name_on_card": "Nom sur la carte",
+            "billing_email": "Adresse e-mail de facturation"
         }
     }
 }
