Add reCAPTCHA environment variables to documentation
- Updated environment variables table to include reCAPTCHA site and secret keys
- Added front-end and back-end reCAPTCHA configuration variables
- Maintained consistent documentation style with existing entries

--- a/docs/configuration/environment-variables.mdx
+++ b/docs/configuration/environment-variables.mdx
@@ -1,5 +1,5 @@
 ---
-title: Environment Variables Configuration
+title: Environment Variables
 description: Detailed guide on configuring environment variables for OpnForm
 ---
 
@@ -26,6 +26,8 @@ There are dedicated configuration pages available for more detailed setup instru
 | `JWT_SECRET`                 | Secret key used to sign JWTs.                    |
 | `H_CAPTCHA_SITE_KEY`         | Site key for hCaptcha integration.               |
 | `H_CAPTCHA_SECRET_KEY`       | Secret key for hCaptcha integration.             |
+| `RE_CAPTCHA_SITE_KEY`        | Site key for reCAPTCHA integration.              |
+| `RE_CAPTCHA_SECRET_KEY`      | Secret key for reCAPTCHA integration.            |
 | `OPEN_AI_API_KEY`            | API key for accessing OpenAI services.           |
 | `UNSPLASH_ACCESS_KEY`        | Access key for Unsplash API.                     |
 | `UNSPLASH_SECRET_KEY`        | Secret key for Unsplash API.                     |
@@ -56,6 +58,7 @@ There are dedicated configuration pages available for more detailed setup instru
 | `NUXT_PUBLIC_APP_URL`        | Public facing URL of the Nuxt application.       |
 | `NUXT_PUBLIC_API_BASE`       | Base URL for the Laravel API.                    |
 | `NUXT_PUBLIC_H_CAPTCHA_SITE_KEY` | Site key for hCaptcha integration on the front-end. |
+| `NUXT_PUBLIC_RE_CAPTCHA_SITE_KEY` | Site key for reCAPTCHA integration on the front-end. |
 | `NUXT_API_SECRET`            | Shared secret key between Nuxt and Laravel backend. |
 
 
